ModuleReference::location() is Optional<URI>